--- a/ML/training/emotion.ipynb
+++ b/ML/training/emotion.ipynb
@@ -18,8 +18,7 @@
         "# - ~7,350 audio files from 24 actors\n",
         "\n",
         "# **Training Strategy**:\n",
-        "# - Freeze all HuBERT layers (keep pre-trained features)\n",
-        "# - Train only the classification head (8 classes)\n",
+        "# - Train a custom classification head (8 classes)\n",
         "# - Speaker-independent train/val/test split"
       ]
     },
